=====================
[1675716] <ESC> to close application now works
[1673028] Merge operation now fixed
[1673028] Similar problem in Compare operation fixed
[1660721] Autotype menu & shortcut no longer disabled if field is
empty.
[1679461, 1612567] Text in Password field no longer truncated with large
texts.
[1682516] Menu display no longer trashed if accelerator pressed with
an open menu.
[TODO] - Update online help with appendix describing
dbase/cfg/registry preference logic (or lack of thereof).
[TODO] - Add '-c config file path' command line option?

New Features for 3.07
========================
[] - Password expiration notice can now be given a few days prior to
actual expiration
[] - Exported/imported text format is now documented in online help

Changes to Existing Features in 3.07
====================================
[] List view columns now selectable, entries sortable by any column,
settings are persistent - Thanks to DK.
[] List view may be configured to show Grid lines.
[] Tree view may be configured to show all groups first, instead of
strict alphabetic order.

New Features for 3.06
=====================
Support for U3 (disk-on-key).

Changes to Existing Features in 3.06
====================================
[] Opening dialog now shows recently opened databases in dropdown list.
[] File opened in initial dialog now added to recent files list.
[1634251] Password expiration date can now be specified relatively,
e.g., "45 days from now".
[] All dates and times are now displayed in the local format.

Bugs fixed in 3.06
==================
[1625557] No longer crashes when invoking help after using Hot-Key.
[1633516] No longer crashes upon Find with an empty group.
[] Configuration handled correctly with non-English user or host
names.
[] No longer crashes when password history policy changes records.
[] Non-English data issues resolved.

New Features for 3.05.02
========================
None.

Changes to Existing Features in 3.05.02