@@ -537,17 +537,32 @@ void
 DboxMain::AutoType(const CItemData &ci)
 {
   CMyString AutoCmd = ci.GetAutoType();
- const CMyString user(ci.GetUser());
- const CMyString pwd(ci.GetPassword());
- if(AutoCmd.IsEmpty()){
-   // checking for user and password for default settings
-   if(!pwd.IsEmpty()){
-     if(!user.IsEmpty())
-       AutoCmd = _T("\\u\\t\\p\\n");
-     else
-       AutoCmd = _T("\\p\\n");
-   }
- }
+  const CMyString user(ci.GetUser());
+  const CMyString pwd(ci.GetPassword());
+
+  // If empty, try the database default
+  if (AutoCmd.IsEmpty()) {
+    AutoCmd = CMyString(PWSprefs::GetInstance()->
+                      GetPref(PWSprefs::DefaultAutotypeString));
+
+    // If still empty, take this default
+    if (AutoCmd.IsEmpty()) {
+      // checking for user and password for default settings
+      if (!pwd.IsEmpty()){
+        if (!user.IsEmpty())
+          AutoCmd = _T("\\u\\t\\p\\n");
+        else
+          AutoCmd = _T("\\p\\n");
+      }
+    }
+  }
+
+  // Turn off CAPSLOCK
+  bool bCapsLock = false;
+  if (GetKeyState(VK_CAPITAL)) {
+    bCapsLock = true;
+    SetCapsLock(false);
+  }
 
  CMyString tmp;
  TCHAR curChar;
@@ -560,8 +575,13 @@ DboxMain::AutoType(const CItemData &ci)
  // since that will clear the data [Bugs item #1026630]
  // (this is why we read user & pwd before actual use)
 
- ShowWindow(SW_MINIMIZE);
- Sleep(1000); // Karl Student's suggestion, to ensure focus set correctly on minimize.
+  // If set always on top, just hide it, otherise minimize
+  if (m_bAlwaysOnTop)
+    ShowWindow(SW_HIDE);
+  else
+    ShowWindow(SW_MINIMIZE);
+
+  Sleep(1000); // Karl Student's suggestion, to ensure focus set correctly on minimize.
 
  for(int n = 0; n < N; n++){
    curChar = AutoCmd[n];
@@ -614,4 +634,38 @@ DboxMain::AutoType(const CItemData &ci)
      tmp += curChar;
  }
  ks.SendString(tmp);
+ 
+  Sleep(100);
+
+  // If we hid it, now show it
+  if (m_bAlwaysOnTop) {
+    ShowWindow(SW_SHOW);
+    SetWindowPos(&wndTopMost, 0, 0, 0, 0, SWP_NOMOVE | SWP_NOSIZE);
+  }
+
+  // If we turned off CAPSLOCK, put it back
+  if (bCapsLock) {
+      SetCapsLock(true);
+  }
+}
+
+void DboxMain::SetCapsLock(const bool bState)
+{
+  BYTE keyState[256];
+
+  GetKeyboardState((LPBYTE)&keyState);
+  if((bState && !(keyState[VK_CAPITAL] & 1)) ||
+     (!bState && (keyState[VK_CAPITAL] & 1))) {
+      // Simulate a key press
+      keybd_event(VK_CAPITAL, 0x45, KEYEVENTF_EXTENDEDKEY | 0, 0);
+      // Simulate a key release
+      keybd_event(VK_CAPITAL, 0x45, KEYEVENTF_EXTENDEDKEY | KEYEVENTF_KEYUP, 0);
+  }
+
+  MSG msg;
+  while (::PeekMessage(&msg, NULL, 0, 0, PM_NOREMOVE) ) {
+    // so there is a message process it.
+    if (!AfxGetThread()->PumpMessage())
+      break;
+  }
 }
