@@ -19,6 +19,9 @@ empty.
 texts.
 [1682516] Menu display no longer trashed if accelerator pressed with
 an open menu.
+[1683060] Autotype fixed (v3.06.01)
+[1678707] CAPSLOCK no longer flips case using Autotype
+[1681366] Now stays on top during autotype
 [TODO] - Update online help with appendix describing
 dbase/cfg/registry preference logic (or lack of thereof).
 [TODO] - Add '-c config file path' command line option?
@@ -28,6 +31,7 @@ New Features for 3.07
 [] - Password expiration notice can now be given a few days prior to
 actual expiration
 [] - Exported/imported text format is now documented in online help
+[1623802] Default Autotype string can be specified per database
 
 Changes to Existing Features in 3.07
 ====================================
